fix: footer-menu align center for tab

--- a/css/style.css
+++ b/css/style.css
@@ -11840,6 +11840,11 @@ ul.children {
     gap: 0 20px;
   }
 }
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .footer-bottom-menu ul {
+    justify-content: center;
+  }
+}
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .footer-bottom-menu ul {
     gap: 0 16px;
@@ -11870,6 +11875,11 @@ ul.children {
 @media (max-width: 767px) {
   .footer-bottom-area .copyright-text {
     margin-bottom: 20px;
+    text-align: center;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .footer-bottom-area .copyright-text {
     text-align: center;
   }
 }
